manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console-deployment
  labels:
    app: nitroboost-console
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: console-pod
  template:
    metadata:
      labels:
        app: console-pod
    spec:
      containers:
        - name: console-pod
          image: blurrito/nitroboostconsoleservice:latest
          ports:
            - name: http
              containerPort: 5000
          args:
            - "$(CONNECTION_STRING)"
          resources:
            requests:
              cpu: "125m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
      terminationGracePeriodSeconds: 1
