manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-service
  labels:
    app: nitroboost-console
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "console-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: console-pod
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 5000
      nodePort: 31000
